Fix flickering (#8)
* add id of group for tracking

* fix flickering

* update

* update to mock

--- a/src/app/views/shared/workflows/workflows.component.scss
+++ b/src/app/views/shared/workflows/workflows.component.scss
@@ -8,7 +8,7 @@
     font-size: 16px;
     border-bottom: 1px solid #ddd;
     >div {
-        margin: 0 28px;
+        margin: 0 20px;
     }
     .workflow-type {
         font-size: 28px;
@@ -33,7 +33,7 @@
     align-items: center;
     justify-content: flex-end;
     >div {
-        margin: 0 28px;
+        margin: 0 20px;
     }
     .workflow-header-item {
         flex-grow: 3;
